--- a/src/main/resources/templates/pages/video.html
+++ b/src/main/resources/templates/pages/video.html
@@ -79,6 +79,7 @@
 </head>
 <body>
     <div class="container">
+
         <h1>Directories</h1>
         <ul>
             <th:block th:each="categorie : ${categories}">
@@ -97,6 +98,7 @@
     </div>
 
     <div class="container">
+        <div>hello,${user.username}</div>
         <h1>Upload Video</h1>
         <form id="uploadForm" enctype="multipart/form-data">
             <label for="titre">Title:</label>
@@ -179,39 +181,28 @@
         });
 
   
-        document.getElementById('addVideoBtn').addEventListener('click', function (event) {
+    document.getElementById('addVideoBtn').addEventListener('click', function (event) {
     event.preventDefault(); 
-
-
     const sousCategorieId = parseInt(document.getElementById('sousCategorie').value, 10);
     if (!sousCategorieId) {
         alert('Please select a SousCategorie first.');
         return;
     }
-
-
     const titre = document.getElementById("titre").value.trim();
     const description = document.getElementById("description").value.trim();
-
     if (!titre || !description) {
         alert('Please fill in both title and description.');
         return;
     }
-
-
     const videoFile = document.getElementById("videoFile").files[0];
     if (!videoFile) {
         alert('Please select a video file.');
         return;
     }
-
-
     const formData = new FormData();
     formData.append("titre", titre);
     formData.append("description", description);
     formData.append("videoFile", videoFile);
-
- 
     fetch(`http://localhost:8080/videos/${sousCategorieId}/add-video`, {
         method: 'POST',
         body: formData,
