--- a/src/main/resources/templates/pages/inscription.html
+++ b/src/main/resources/templates/pages/inscription.html
@@ -19,9 +19,9 @@
                 </div>
                 <ul class="navbar-links">
                     <li><a href="/index">ACCUEIL</a></li>
-                    <li><a href="../pages/entrainement.html">ENTRAINEMENTS</a></li>
-                    <li><a href="../pages/nutrition.html">NUTRITION</a></li>
-                    <li><a href="../pages/documentaire.html">DOCUMENTAIRES</a></li>
+                    <li><a href="/entrainement">ENTRAINEMENTS</a></li>
+                    <li><a href="/nutrition">NUTRITION</a></li>
+                    <li><a href="/documentaire">DOCUMENTAIRES</a></li>
                     <li><a href="/contact">CONTACT</a></li>
                 </ul>
                 <div class="iconCompte"><i class="fa-solid fa-magnifying-glass"></i></div>
