--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" xmlns="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -13,16 +13,21 @@
         <nav>
             <div class="navbar-container">
                 <div class="logo-container">
-                    <a href="/index"><img src="assets/images/logo.png" alt="logo"></a>
+                    <a href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
                 </div>
+                <div class="menu-button" onclick="toggleMenu()">☰</div>
                 <ul class="navbar-links">
                         <li><a href="/index">ACCUEIL</a></li>
-                        <li><a href="pages/entrainement.html">ENTRAINEMENTS</a></li>
-                        <li><a href="pages/nutrition.html">NUTRITION</a></li>
-                        <li><a href="pages/documentaire.html">DOCUMENTAIRES</a></li>
+                        <li><a href="/entrainement">ENTRAINEMENTS</a></li>
+                        <li><a href="/nutrition">NUTRITION</a></li>
+                        <li><a href="/documentaire">DOCUMENTAIRES</a></li>
                         <li><a href="/contact">CONTACT</a></li>
                     </ul>
-                    <div class="iconCompte"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    <div class="iconCompte-wrapper">
+                        <div class="iconCompte"><i class="fa-solid fa-magnifying-glass"></i></div>
+                        </div>   <div id="goToLoginButton" class="profil-picture-container">
+                        <a href="pages/profil.html"><img  src="assets/images/profile-pic-navbar.png" alt="profil-picture"></a>
+                    </div>
                     <button id="connect"><a href="/inscription">SE CONNECTER</a></button>
                 </div>  
         </nav> 
@@ -113,7 +118,7 @@
         <div class="left">                
             <div class="logo">
             <div class="logo-container">
-                <a href="/index"><img src="assets/images/logo.png" alt="logo"></a>
+                <a href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
             </div>
             <div class="social-media">
                 <i class="fa-brands fa-facebook-f"></i>
@@ -148,5 +153,6 @@
         <p>© 2024 [Your Name or Company]. All Rights Reserved. | Terms of Service | Privacy Policy</p>
     </div>
 </footer>
+<script src="assets/Javascript/js.js"></script>
 </body>
 </html>
