--- a/src/main/resources/templates/pages/contact.html
+++ b/src/main/resources/templates/pages/contact.html
@@ -14,16 +14,21 @@
         <nav>
             <div class="navbar-container">
                 <div class="logo-container">
-                    <a href="/index"><img src="../assets/images/logo.png" alt="logo"></a>
+                    <a href="../index.html"><img src="../assets/images/logo.png" alt="logo"></a>
                 </div>
+                <div class="menu-button" onclick="toggleMenu()">☰</div>
                 <ul class="navbar-links">
                     <li><a href="/index">ACCUEIL</a></li>
-                    <li><a href="../pages/entrainement.html">ENTRAINEMENTS</a></li>
-                    <li><a href="../pages/nutrition.html">NUTRITION</a></li>
-                    <li><a href="../pages/documentaire.html">DOCUMENTAIRES</a></li>
-                    <li><a href="../pages/contact.html">CONTACT</a></li>
+                    <li><a href="/entrainement">ENTRAINEMENTS</a></li>
+                    <li><a href="/nutrition">NUTRITION</a></li>
+                    <li><a href="/documentaire">DOCUMENTAIRES</a></li>
+                    <li><a href="/contact">CONTACT</a></li>>
                 </ul>
-                <div class="iconCompte"><i class="fa-solid fa-magnifying-glass"></i></div>
+                <div class="iconCompte-wrapper">
+                    <div class="iconCompte"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    </div>  <div id="goToLoginButton" class="profil-picture-container">
+                    <a href="/profil"><img  src="../assets/images/profile-pic-navbar.png" alt="profil-picture"></a>
+                </div>
                 <button id="connect"><a href="/inscription">SE CONNECTER</a></button>
             </div>  
         </nav> 
@@ -76,7 +81,7 @@
             <div class="left">                
                 <div class="logo">
                 <div class="logo-container">
-                    <a href="/index"><img src="../assets/images/logo.png" alt="logo"></a>
+                    <a href="../index.html"><img src="../assets/images/logo.png" alt="logo"></a>
                 </div>
                 <div class="social-media">
                     <i class="fa-brands fa-facebook-f"></i>
