--- a/src/main/resources/templates/pages/entrainement.html
+++ b/src/main/resources/templates/pages/entrainement.html
@@ -5,31 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script src="../assets/Javascript/head.js"></script>
+    <script src="../assets/Javascript/inscription.js"></script>
     <title>Entrainement-SportFemme</title>
 </head>
-<body background="../assets/images/bg6.png">
-    <header>
-        <nav>
+<body>
+    <header class="headerbg3">
             <nav>
                 <div class="navbar-container">
                     <div class="logo-container">
                         <a href="../index.html"><img src="../assets/images/logo.png" alt="logo"></a>
                     </div>
+                    <div class="menu-button" onclick="toggleMenu()">☰</div>
                     <ul class="navbar-links">
-                        <li><a href="../index.html">ACCUEIL</a></li>
-                        <li><a href="../pages/entrainement.html">ENTRAINEMENTS</a></li>
-                        <li><a href="../pages/nutrition.html">NUTRITION</a></li>
-                        <li><a href="../pages/documentaire.html">DOCUMENTAIRES</a></li>
-                        <li><a href="../pages/contact.html">CONTACT</a></li>
+                        <li><a href="/index">ACCUEIL</a></li>
+                        <li><a href="/entrainement">ENTRAINEMENTS</a></li>
+                        <li><a href="/nutrition">NUTRITION</a></li>
+                        <li><a href="/documentaire">DOCUMENTAIRES</a></li>
+                        <li><a href="/contact">CONTACT</a></li>
                     </ul>
+                    <div class="iconCompte-wrapper">
                     <div class="iconCompte"><i class="fa-solid fa-magnifying-glass"></i></div>
-                    <button id="connect"><a href="../pages/inscription.html">SE CONNECTER</a></button>
+                    </div>   
+                    <div id="goToLoginButton" class="profil-picture-container">
+                        <a href="/profil"><img  src="../assets/images/profile-pic-navbar.png" alt="profil-picture"></a>
+                    </div>
+                    <button id="connect"><a href="/inscription">SE CONNECTER</a></button>
                 </div>  
             </nav>
-        </nav> 
-    </header>
-    <main>
-        <div id="container">
             <div class="h1left"><h1>ENTRAINEMENT</h1></div>
             <div id="filter">
                 <button class="button-filter button-filter1" onclick="articlesAffiche(articles, 'articles-container', 'all', 'style1')">Tout</button>
@@ -40,6 +43,10 @@
                 <button class="button-filter button-filter1"  onclick="articlesAffiche(articles, 'articles-container', 'balle', 'style1')">Jeux de balle</button>
                 <button class="button-filter button-filter1"  onclick="articlesAffiche(articles, 'articles-container', 'fitness', 'style1')">Appareils de fitness</button>
             </div>
+    </header>
+    <main class="mainbg">
+        <div id="container">
+           
             <div id="articles-container"></div>
     
         </div>
