--- a/src/main/resources/templates/pages/nutrition.html
+++ b/src/main/resources/templates/pages/nutrition.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" xmlns="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script src="../assets/Javascript/head.js"></script>
+    <script src="../assets/Javascript/inscription.js"></script>
     <title>Nutrition-SportFemme</title>
 </head>
-<body background="../assets/images/N26.jpg">
-    <header>
+<body>
+    <header class="headerbg2">
         <nav>
             <div class="navbar-container">
                 <div class="logo-container">
                     <a href="../index.html"><img src="../assets/images/logo.png" alt="logo"></a>
                 </div>
+                <div class="menu-button" onclick="toggleMenu()">☰</div>
                 <ul class="navbar-links">
-                    <li><a href="../index.html">ACCUEIL</a></li>
-                    <li><a href="../pages/entrainement.html">ENTRAINEMENTS</a></li>
-                    <li><a href="../pages/nutrition.html">NUTRITION</a></li>
-                    <li><a href="../pages/documentaire.html">DOCUMENTAIRES</a></li>
-                    <li><a href="../pages/contact.html">CONTACT</a></li>
+                    <li><a href="/index">ACCUEIL</a></li>
+                    <li><a href="/entrainement">ENTRAINEMENTS</a></li>
+                    <li><a href="/nutrition">NUTRITION</a></li>
+                    <li><a href="/documentaire">DOCUMENTAIRES</a></li>
+                    <li><a href="/contact">CONTACT</a></li>
                 </ul>
-                <div class="iconCompte"><i class="fa-solid fa-magnifying-glass"></i></div>
-                <button id="connect"><a href="../pages/inscription.html">SE CONNECTER</a></button>
+                <div class="iconCompte-wrapper">
+                    <div class="iconCompte"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    </div>  <div id="goToLoginButton" class="profil-picture-container">
+                    <a href="/profil"><img  src="../assets/images/profile-pic-navbar.png" alt="profil-picture"></a>
+                </div>
+                <button id="connect"><a href="/inscription">SE CONNECTER</a></button>
             </div>  
         </nav>
+        <div class="h1left"><h1>NUTRITION</h1></div>
+        <div id="filter">
+            <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'all', 'style2')">Tout</button>
+            <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Faible en calories et en graisse', 'style2')">Faible en calories et en graisse</button>
+            <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Sans noix', 'style2')">Sans noix</button>
+            <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Sans lactose', 'style2')">Sans lactose</button>
+            <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Glucides peu fermentescibles', 'style2')">Glucides peu fermentescibles</button>
+            <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Sans gluten', 'style2')">Sans gluten</button>
+            <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Végétalien', 'style2')">Végétalien</button>
+            <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Végétarien', 'style2')">Végétarien</button>
+            <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Original', 'style2')">Original</button>
+        </div>
     </header>
     <main>
       
      <div id="homePage" >
         <div id="container">
-            <div class="h1left"><h1>NUTRITION</h1></div>
-            <div id="filter">
-                <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'all', 'style2')">Tout</button>
-                <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Faible en calories et en graisse', 'style2')">Faible en calories et en graisse</button>
-                <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Sans noix', 'style2')">Sans noix</button>
-                <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Sans lactose', 'style2')">Sans lactose</button>
-                <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Glucides peu fermentescibles', 'style2')">Glucides peu fermentescibles</button>
-                <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Sans gluten', 'style2')">Sans gluten</button>
-                <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Végétalien', 'style2')">Végétalien</button>
-                <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Végétarien', 'style2')">Végétarien</button>
-                <button class="button-filter button-filter2"  onclick="articlesAffiche(articles2, 'articles2-container', 'Original', 'style2')">Original</button>
-            </div>
+           
             <div id="articles2-container"></div>
     
         </div>
